objects/Ace_Customer_SKU_Changes__c.object
<CustomObject>
    <description>Price Change Process UI</description>
    <fields>
        <fullName>ACE_SKU_Changes_ID1__c</fullName>
        <externalId>true</externalId>
        <label>ACE_SKU_Changes_ID1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ACE_SKU_Changes_ID__c</fullName>
        <externalId>true</externalId>
        <label>ACE_SKU_Changes_ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Ace_Customer_Core_Changes__r.ACE_Customer_Price_Changes__r.Customer__r.Owner.FirstName + &apos; &apos; +Ace_Customer_Core_Changes__r.ACE_Customer_Price_Changes__r.Customer__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Ace_Customer_SKU_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ace_Customer_Core_Changes__c</fullName>
        <label>Customer Core Changes</label>
        <referenceTo>Ace_Customer_Core_Changes__c</referenceTo>
        <relationshipLabel>Customer SKU Changes</relationshipLabel>
        <relationshipName>Ace_Customer_SKU_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Implementation_Date__c</fullName>
        <description>This fields holds the date the sku got implemented in vendavo</description>
        <label>Actual Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addition_communication_requirements__c</fullName>
        <label>Addition_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alt_SKU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if it is Alt sku</description>
        <label>Alt_SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Chosen_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate whether the user has replaced the sku with its alternate</description>
        <label>Alternate Chosen Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alternate Margin value of alt sku</description>
        <label>Alternate Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_SKU_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is Migrated from CRMDEMO</description>
        <label>Annual SKU Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Usage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is migrated from CRMDEMO</description>
        <label>Annual Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <formula>if(SFDC_Notification_Flag__c==&apos;3&apos;,&quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_status__c</fullName>
        <label>Approval status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Proposed_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will hold the actual proposed price (new price). The value from ACE will be copied to this field and new proposals by rep after approval will be copied to this field</description>
        <label>New Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Reason__c</fullName>
        <label>Backlog_Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Month__c</fullName>
        <formula>VALUE(RIGHT((LEFT((batchId__c), 2)),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch_Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Year__c</fullName>
        <formula>VALUE(RIGHT((batchId__c), 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch_Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Calculation_Base__c</fullName>
        <label>Cap Calculation Base</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Format__c</fullName>
        <label>Cap Format</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $ 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $ 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $ 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cap Lost Margin Dollar $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Scope__c</fullName>
        <label>Cap Scope</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Units__c</fullName>
        <label>Cap Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeAmount_per__c</fullName>
        <formula>if(Current_Sell_Price__c !=0 ,(Change_Amount__c / Current_Sell_Price__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChangeAmount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Change_Amount__c</fullName>
        <formula>Approved_Proposed_Price__c-Current_Sell_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Description__c</fullName>
        <label>Class Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Id__c</fullName>
        <description>SKU Merch Hierarchy? - Yes</description>
        <label>Class Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Vetting_Not_Performed__c</fullName>
        <label>Comp_Vetting_Not_Performed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompareQtr_Appr__c</fullName>
        <formula>OR(((SalesPriceChangeEffDateApprYear__c &gt; Batch_Year__c)),((SalesPriceChangeEffDateApprYear__c = Batch_Year__c)&amp;&amp;(SalesPriceChangeEffDateApprMonth__c &gt; Batch_Month__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompareQtr_Appr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complex_Cap__c</fullName>
        <label>Complex_Cap</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreList_ID__c</fullName>
        <description>Vendavo Corelist.VNumber</description>
        <label>CoreList ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreList_Indicator__c</fullName>
        <label>CoreList Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreList_Type__c</fullName>
        <description>Either
C = Custom Core
S = Standard Core</description>
        <label>CoreList Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Description__c</fullName>
        <description>Vendavo Corelist.Description</description>
        <label>Core Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Priority__c</fullName>
        <formula>CASE(Owning_Customer_Corelist_Priority__c ,&apos;A&apos;,1,&apos;B&apos;,2,&apos;C&apos;,3,&apos;D&apos;,4,&apos;E&apos;,5,&apos;F&apos;,6,&apos;G&apos;,7,&apos;H&apos;,8,&apos;I&apos;,9,&apos;J&apos;,10,&apos;K&apos;,11,&apos;L&apos;,12,&apos;M&apos;,13,&apos;N&apos;,14,&apos;O&apos;,15,&apos;P&apos;,16,&apos;Q&apos;,17,&apos;R&apos;,18,&apos;S&apos;,19,&apos;T&apos;,20,&apos;U&apos;,21,&apos;V&apos;,22,&apos;W&apos;,23,&apos;X&apos;,24,&apos;Y&apos;,25,&apos;Z&apos;,26,99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_s_SKU_Vendor_ID__c</fullName>
        <label>Core’s SKU Vendor ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_s_SKU_Vendor_Name__c</fullName>
        <label>SKU&apos;s Primary Vendor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Change_From_Date__c</fullName>
        <label>Cost Change From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Change_To_Date__c</fullName>
        <label>Cost Change To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_List_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Price_Method__c</fullName>
        <description>Price Method at SKU Level Values:
•         Fixed Price
•         DFZ
•         Cost
•         DFL</description>
        <label>Current Price Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sell_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_WANET_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current WANET Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_WAPO_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current WAPO Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_WATD_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current WATD Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Core_Price_Changes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Core Price Changes</label>
        <referenceTo>ACE_Customer_Price_Changes__c</referenceTo>
        <relationshipLabel>Customer SKU Changes</relationshipLabel>
        <relationshipName>Customer_SKU_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Date__c</fullName>
        <label>Customer Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Change__c</fullName>
        <label>Customer Price Change</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers_Linked__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vendavo
Cplpriorityhandle_v
Bidagreement
Vvalidity_from
Vvalidity_to
Delete = &apos;F&apos;</description>
        <label>Customers Linked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DISCO_communication_requirements__c</fullName>
        <label>DISCO_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DSM Level User</description>
        <label>DSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_SKU_Changes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deletion_communication_requirements__c</fullName>
        <label>Deletion_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Description__c</fullName>
        <label>Dept Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Id__c</fullName>
        <label>Dept Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <label>Division Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Id__c</fullName>
        <label>Division Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Language__c</fullName>
        <label>Effective_Date_Language</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Erosion_Exists__c</fullName>
        <formula>IF( Proposed_Price_Without_Cap__c &lt;&gt;  Approved_Proposed_Price__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Erosion Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Spend 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Spend 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Projected Spend 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_IGM_Basis_Point_Increase__c</fullName>
        <label>Gross IGM Basis Point Increase</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group_Description__c</fullName>
        <label>Group Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>High Priority flag for Hosted Cat functionality</description>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePage_Approval_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HomePage_Approval_History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HostedCatalog_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag if marked true will not allow data to be released to vendavo. The flag will be unset when the data is loaded back in by hosted Catalog team</description>
        <label>HostedCatalog Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hosted_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hosted Catalog flag for Hosted Catalog bucket</description>
        <label>Hosted Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Message__c</fullName>
        <description>This field holds the error or success message from vendavo</description>
        <label>Implementation Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Status_Code__c</fullName>
        <formula>Ace_Customer_Core_Changes__r.ACE_Customer_Price_Changes__r.Implementation_Status_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Status Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Price_Freeze_Period__c</fullName>
        <label>Initial Price Freeze Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to track if the User has deleted the SKU record from the Request Sales Price Exception Screen.</description>
        <inlineHelpText>Field to track if the User has deleted the SKU record from the Request Sales Price Exception Screen.</inlineHelpText>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotifyCancelled__c</fullName>
        <formula>if( 
( Price_Changes_Type1__c==&apos;Cost&apos; &amp;&amp; Change_Amount__c&gt;0 &amp;&amp; text(Status__c) !=&apos;Deleted&apos;)  ||
( Price_Changes_Type1__c==&apos;Margin Swap&apos; &amp;&amp; Change_Amount__c&gt;0 &amp;&amp; text(Status__c) !=&apos;Deleted&apos;)  ||
( Price_Changes_Type1__c==&apos;Margin Lift&apos; &amp;&amp; Change_Amount__c&gt;0 &amp;&amp; text(Status__c) !=&apos;Deleted&apos;)  ,
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNotifyCancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cap_Lesser_Of_Two__c</fullName>
        <label>Is_Cap_Lesser_Of_Two</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_There_A_Cap__c</fullName>
        <label>Is_There_A_Cap</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_12_Month_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated SKU Sold Qty for this Core, Last 12 calendar months from current date
Same Time Period as of Sales</description>
        <label>12 Month Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_12_Month_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vendavo PA</description>
        <label>Item 12 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_3_Month_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated SKU Sold Qty for this Core, Last 3 calendar months from current date
Same Time Period as of Sales</description>
        <label>3 Month Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_3_Month_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated SKU Sales for this Core, Last 3 calendar months from current date</description>
        <label>Item 3 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_6_Month_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated SKU Sold Qty for this Core, Last 6 calendar months from current date
Same Time Period as of Sales</description>
        <label>6 Month Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_6_Month_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vendavo PA</description>
        <label>Item 6 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L1_Mgr_AppReject_Time_c__c</fullName>
        <formula>L1_Mgr_Approval_End_Date__c -  L1_Mgr_Approval_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1_Mgr_AppReject_Time__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_Mgr_Approval_End_Date__c</fullName>
        <description>L1 Mgr Approval End Date</description>
        <label>L1 Mgr Approval End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L1_Mgr_Approval_Start_Date__c</fullName>
        <description>L1 Mgr Approval Start Date</description>
        <label>L1 Mgr Approval Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2_Mgr_AppReject_Time_c__c</fullName>
        <formula>IF ( L2_Mgr_Approval_End_Date__c != null, L2_Mgr_Approval_End_Date__c -  L2_Mgr_Approval_Start_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2_Mgr_AppReject_Time__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2_Mgr_Approval_End_Date__c</fullName>
        <description>L2 Mgr Approval End Date</description>
        <label>L2 Mgr Approval End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2_Mgr_Approval_Start_Date__c</fullName>
        <description>L2 Mgr Approval Start Date</description>
        <label>L2 Mgr Approval Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L3_Mgr_AppReject_Time_c__c</fullName>
        <formula>IF ( L3_Mgr_Approval_End_Date__c != null, L3_Mgr_Approval_End_Date__c -  L3_Mgr_Approval_Start_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L3_Mgr_AppReject_Time__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L3_Mgr_Approval_End_Date__c</fullName>
        <description>L3 Mgr Approval End Date</description>
        <label>L3 Mgr Approval End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L3_Mgr_Approval_Start_Date__c</fullName>
        <description>L3 Mgr Approval Start Date</description>
        <label>L3 Mgr Approval Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModify_Tracking__c</fullName>
        <label>LastModify Tracking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_12_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_3_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_6_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_before_change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin Exposure (before change)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Play__c</fullName>
        <label>Margin Play Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_wo_Change_WAPO__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin % wo/ Change WAPO</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_wo_Change_WATD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin % wo/ Change WATD</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NWCustomer_Notification_Flag__c</fullName>
        <label>NWCustomer Notification Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Approval_Price__c</fullName>
        <label>New Approval Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Gross_IGM1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Gross IGM %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Gross_IGM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Gross IGM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_IGM_Change__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New IGM $ Change</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_List_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Price_cal__c</fullName>
        <formula>Proposed_Price_with_Cap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Price ACE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Dollar_Change_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Change in Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Percentage_Change_Amoun__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price Change %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_WANET_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New WANET Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_WAPO_Cost_Effective_Date__c</fullName>
        <label>New WAPO Cost Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_WAPO_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New WAPO Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_WATD_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New WATD Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_eligible_increase_date__c</fullName>
        <label>Next eligible increase date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Action__c</fullName>
        <label>Notification Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Cancelled__c</fullName>
        <formula>Ace_Customer_Core_Changes__r.ACE_Customer_Price_Changes__r.Notify_Cancelled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notify Cancelled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Gross_IGM1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Gross IGM %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Old_Gross_IGM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old Gross IGM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_WANET__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WANET</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WAPO_Margin1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WAPO Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_WAPO_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WAPO Margin %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Old_WAPO__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WAPO</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WATD_SRM1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WATD SRM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_WATD_SRM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WATD SRM %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Old_WATD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Old WATD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>